unpackaged/main/default/objects/FS_Fellow__c/FS_Fellow__c.object-meta.xml
<CustomObject>
    <description>Custom object to track fellows information</description>
    <label>Fellow</label>
    <nameField>
        <displayFormat>Fellow {000000}</displayFormat>
        <label>Fellow ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fellows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>