unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Annual_Payment__c.field-meta.xml
<CustomField>
    <fullName>FS_Annual_Payment__c</fullName>
    <inlineHelpText>Annual payment amount paid by the fellow</inlineHelpText>
    <label>Annual Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>