unpackaged/main/default/objects/FS_Fellow__c/fields/FS_COG_Level__c.field-meta.xml
<CustomField>
    <fullName>FS_COG_Level__c</fullName>
    <inlineHelpText>Level of giving</inlineHelpText>
    <label>COG Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Fellow ($1,000)</fullName>
            </value>
            <value>
                <fullName>Fellow ($2000)</fullName>
            </value>
            <value>
                <fullName>Sustaining Fellow ($2,500)</fullName>
            </value>
            <value>
                <fullName>Freedman Circle ($3,000)</fullName>
            </value>
            <value>
                <fullName>Hughes Circle ($5,000)</fullName>
            </value>
            <value>
                <fullName>Cardozo Circle ($10,000)</fullName>
            </value>
            <value>
                <fullName>John Jay Circle ($15,000)</fullName>
            </value>
            <value>
                <fullName>Thurgood Marshall ($25,000)</fullName>
            </value>
            <value>
                <fullName>Kay Crawford Murray ($40,000)</fullName>
            </value>
            <value>
                <fullName>Hand Circle ($50,000)</fullName>
            </value>
            <value>
                <fullName>President's Circle ($75,000)</fullName>
            </value>
            <value>
                <fullName>Fellow ($5000)</fullName>
                <isActive>false</isActive>
                <label>Fellow ($5000)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>