unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact opted into the fellows donation program</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fellows</relationshipLabel>
    <relationshipName>Fellows</relationshipName>
    <type>Lookup</type>
</CustomField>