unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Date_Elected__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_Elected__c</fullName>
    <inlineHelpText>Date the contact was elected as a fellow</inlineHelpText>
    <label>Date Elected</label>
    <type>Date</type>
</CustomField>