unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Days_Since_Last_Paid__c.field-meta.xml
<CustomField>
    <fullName>FS_Days_Since_Last_Paid__c</fullName>
    <formula>TODAY() - FS_Last_Payment_Date__c</formula>
    <inlineHelpText>Difference between last payment date and today in days</inlineHelpText>
    <label>Days Since Last Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>