unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Imported_Pledge_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>FS_Imported_Pledge_Amount_Paid__c</fullName>
    <description>This is the imported pledge amount paid. It comes from external data sources.</description>
    <inlineHelpText>This is the imported pledge amount paid. It comes from external data sources.</inlineHelpText>
    <label>Imported Pledge Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>