unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Payment_Date__c</fullName>
    <description>Date last paid by the member</description>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>