unpackaged/main/default/objects/FS_Fellow__c/fields/FS_LTD_3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>FS_LTD_3rd_Party__c</fullName>
    <label>LTD 3rd Party</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>