unpackaged/main/default/objects/FS_Fellow__c/fields/FS_LTD_Other_GIfts__c.field-meta.xml
<CustomField>
    <fullName>FS_LTD_Other_GIfts__c</fullName>
    <label>LTD Other GIfts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>