unpackaged/main/default/objects/FS_Fellow__c/fields/FS_LTD_Restricted_Gifts__c.field-meta.xml
<CustomField>
    <fullName>FS_LTD_Restricted_Gifts__c</fullName>
    <inlineHelpText>Amount contributed towards LTD restricted gifts</inlineHelpText>
    <label>LTD Restricted Gifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>