unpackaged/main/default/objects/FS_Fellow__c/fields/FS_LTD_Soft_Credits__c.field-meta.xml
<CustomField>
    <fullName>FS_LTD_Soft_Credits__c</fullName>
    <inlineHelpText>Soft credits applicable towards pledge payment</inlineHelpText>
    <label>LTD Soft Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>