unpackaged/main/default/objects/FS_Fellow__c/fields/FS_LTD_Total_to_TNYBF__c.field-meta.xml
<CustomField>
    <fullName>FS_LTD_Total_to_TNYBF__c</fullName>
    <inlineHelpText>Total contribution towards TNYBF</inlineHelpText>
    <label>LTD Total to TNYBF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>