unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Nominated_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Nominated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact who nominated the fellow</inlineHelpText>
    <label>Nominated By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fellows Nominations</relationshipLabel>
    <relationshipName>Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>