unpackaged/main/default/objects/FS_Fellow__c/fields/FS_NominatedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_NominatedBy__c</fullName>
    <inlineHelpText>Historical nominators imported from iMIS.</inlineHelpText>
    <label>Nominated By</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>