unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Paid_Life__c.field-meta.xml
<CustomField>
    <fullName>FS_Paid_Life__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if paid for life</inlineHelpText>
    <label>Paid Life</label>
    <type>Checkbox</type>
</CustomField>