unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>FS_Pledge_Amount__c</fullName>
    <inlineHelpText>Total amount pledged</inlineHelpText>
    <label>Pledge Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>