unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Pledge_Amount_Balance__c.field-meta.xml
<CustomField>
    <fullName>FS_Pledge_Amount_Balance__c</fullName>
    <formula>IF( FS_Paid_Life__c , 0, FS_Pledge_Amount__c - FS_Total_Pledge_Amount_Paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge Amount Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>