unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Pledge_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>FS_Pledge_Amount_Paid__c</fullName>
    <description>Amount paid by the member till now</description>
    <label>Pledge Amount Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>