unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Pledge_Balance__c.field-meta.xml
<CustomField>
    <fullName>FS_Pledge_Balance__c</fullName>
    <inlineHelpText>Balance due on the pledge amount</inlineHelpText>
    <label>Pledge Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>