unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Pledge_Years__c.field-meta.xml
<CustomField>
    <fullName>FS_Pledge_Years__c</fullName>
    <inlineHelpText>Number of years the fellow has pledged to donate</inlineHelpText>
    <label>Pledge Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>