unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>FS_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Order tied to the fellows pledge/installments</description>
    <inlineHelpText>Sales Order tied to the fellows pledge/installments</inlineHelpText>
    <label>Sales Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.FS_Contact__c</field>
            <operation>equals</operation>
            <valueField>$Source.FS_Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>Fellows</relationshipLabel>
    <relationshipName>Fellows</relationshipName>
    <type>Lookup</type>
</CustomField>