unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Status__c</fullName>
    <inlineHelpText>Status of contact as a fellow</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Nominated</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
                <isActive>false</isActive>
                <label>Deceased</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>