unpackaged/main/default/objects/FS_Fellow__c/fields/FS_Total_Pledge_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Pledge_Amount_Paid__c</fullName>
    <description>The sum of the imported pledge amount paid plus the calculated pledge amount paid (sum of all receipts lines linked to sales orders lines inked to this fellows record, less refunds)</description>
    <formula>FS_Pledge_Amount_Paid__c + FS_Imported_Pledge_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of the imported pledge amount paid plus the calculated pledge amount paid (sum of all receipts lines linked to sales orders lines inked to this fellows record, less refunds)</inlineHelpText>
    <label>Total Pledge Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>