unpackaged/main/default/objects/FS_Fellow__c/fields/LTD_Fellows_Circle_Payments__c.field-meta.xml
<CustomField>
    <fullName>LTD_Fellows_Circle_Payments__c</fullName>
    <inlineHelpText>LTD Fellows/Circle Payments</inlineHelpText>
    <label>LTD Fellows/Circle Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>