unpackaged/main/default/objects/FS_Fellow__c/listViews/Active_Fellows.listView-meta.xml
<ListView>
    <fullName>Active_Fellows</fullName>
    <columns>NAME</columns>
    <columns>FS_Contact__c</columns>
    <columns>FS_COG_Level__c</columns>
    <columns>FS_Status__c</columns>
    <columns>FS_Pledge_Amount__c</columns>
    <columns>FS_Pledge_Balance__c</columns>
    <columns>FS_Pledge_Amount_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FS_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Fellows</label>
</ListView>