unpackaged/main/default/objects/FS_Fellow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FS_Contact__c</columns>
    <columns>FS_COG_Level__c</columns>
    <columns>FS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>